--- a/comparison.html
+++ b/comparison.html
@@ -18,9 +18,87 @@
 
   <body>
     <!-- Start of navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="./index.html">Latitude Web Page</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../comparison.html">Comparison</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../data.html">Data</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Plots
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/cloudiness.html">Cloudiness</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/humidity.html">Humidity</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/temp.html">Temperature</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/wind.html">Wind</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    
     <!-- End of navbar -->
 
     <!-- Start of container -->
+    <div class = "container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Comparison: Latitude vs. X</h1>
+        </div>
+      </div> 
+      <div class="row">
+        <h3> Click on the images to see their analysis<h3>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Cloudiness</h2>
+          <a href="visualizations/cloudiness.html">
+          <img src="assets/images/Fig3.png"width="400px" height="400px">
+          </a>
+        </div>
+
+        <div class="col-md-6">
+          <h2>Humidity</h2>
+          <a href="visualizations/humidity.html">
+          <img src="assets/images/Fig2.png"width="400px" height="400px">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <h2>Temperature</h2>
+          <a href="visualizations/temp.html">
+          <img src="assets/images/Fig1.png"width="400px" height="400px">
+          </a>
+        </div>
+
+        <div class="col-md-6">
+          <h2>Wind Speed</h2>
+          <a href="visualizations/wind.html">
+          <img src="assets/images/Fig4.png"width="400px" height="400px">
+          </a>
+        </div>
+ 
+      </div>
+    </div>
     <!-- End of container -->
 
     <!-- jQuery CDN -->
