--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -18,12 +18,75 @@
 
   <body>
     <!-- Start of navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="../index.html">Latitude Web Page</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../comparison.html">Comparison</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../data.html">Data</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Plots
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/cloudiness.html">Cloudiness</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/humidity.html">Humidity</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/temp.html">Temperature</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../visualizations/wind.html">Wind</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    
     <!-- End of navbar -->
 
     <!-- Start of container -->
+    <h2>Latitude vs. Cloudiness</h2>
+      <hr>
+      <img src="../assets/images/Fig3.png" class="img-fluid">
+      <p>This graph presents the correlation between a city's latitude and cloudiness.
+        <br>
+        We can see a weak correlation between a city's latitude and cloudiness. Hence, when a city is closer to the equator there shouldnt be a difference in cloudiness.
+      </p>
+    </div>
+    <div class="col-md-6">
+      <h2>Humidity</h2>
+      <a href="visualizations/humidity.html">
+      <img src="../assets/images/Fig2.png"class="img-fluid"/>
+      </a>
+    </div>
 
-          <!-- Start of Visualizations imageNav Area -->
-          <!-- End of the Visualizations imageNav Area -->
+    <div class="col-md-6">
+      <h2>Temperature</h2>
+      <a href="visualizations/temp.html">
+      <img src="../assets/images/Fig1.png"class="img-fluid"/>
+      </a>
+    </div>
+
+    <div class="col-md-6">
+      <h2>Wind Speed</h2>
+      <a href="visualizations/wind.html">
+      <img src="../assets/images/Fig4.png"class="img-fluid"/>
+      </a>
+    </div>
 
     <!-- End of container -->
 
