updated links and image sizes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-md-12">
             <h1>Summary: Latitude vs. X</h1>
-              <img src="./assets/images/Fig1.png" alt="..." width="400px" height="400px" class="img-fluid">
+              <img src="./assets/images/Fig1.png" alt="..." width="600px" height="600px" class="img-fluid">
               <p>
                 The purpose of this webpage is the show how weather changes in relation to the equator and latitude of the city you are in. In order to obtain this information we pulled data from OpenWeather API for over 500 cities. 
               </p>
@@ -77,20 +77,20 @@
             <div class="box">
               <h2>Visualizations</h2>
               <hr>
-              <a href="./visualizations/temp.html">
-                <img src="./assets/images/Fig1.png" alt="City Latitude vs. Max Temp" width="400px" height="400px">
+              <a href="../visualizations/temp.html">
+                <img src="../assets/images/Fig1.png" alt="City Latitude vs. Max Temp" width="600px" height="600px">
               </a>
   
-              <a href="./visualizations/humidity.html">
-                <img src="./assets/images/Fig2.png" alt="City Latitude vs. Humidity" width="400px" height="400px">
+              <a href="../visualizations/humidity.html">
+                <img src="../assets/images/Fig2.png" alt="City Latitude vs. Humidity" width="600px" height="600px">
               </a>
   
-              <a href="./visualizations/cloudiness.html">
-                <img src="./assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" width="400px" height="400px">
+              <a href="../visualizations/cloudiness.html">
+                <img src="../assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" width="600px" height="600px">
               </a>
   
-              <a href="./visualizations/wind.html">
-                <img src="./assets/images/Fig4.png" alt="City Latitude vs. Wind Speed" width="400px" height="400px">
+              <a href="../visualizations/wind.html">
+                <img src="../assets/images/Fig4.png" alt="City Latitude vs. Wind Speed" width="600px" height="600px">
               </a>
   
             </div>
