--- a/comparison.html
+++ b/comparison.html
@@ -72,28 +72,28 @@
       <div class="row">
         <div class="col-md-6">
           <h2>Cloudiness</h2>
-          <a href="visualizations/cloudiness.html">
-          <img src="assets/images/Fig3.png"width="400px" height="400px">
+          <a href="../visualizations/cloudiness.html">
+          <img src="../assets/images/Fig3.png"width="400px" height="400px">
           </a>
         </div>
 
         <div class="col-md-6">
           <h2>Humidity</h2>
-          <a href="visualizations/humidity.html">
-          <img src="assets/images/Fig2.png"width="400px" height="400px">
+          <a href="../visualizations/humidity.html">
+          <img src="../assets/images/Fig2.png"width="400px" height="400px">
           </a>
         </div>
         <div class="col-md-6">
           <h2>Temperature</h2>
-          <a href="visualizations/temp.html">
-          <img src="assets/images/Fig1.png"width="400px" height="400px">
+          <a href="../visualizations/temp.html">
+          <img src="../assets/images/Fig1.png"width="400px" height="400px">
           </a>
         </div>
 
         <div class="col-md-6">
           <h2>Wind Speed</h2>
-          <a href="visualizations/wind.html">
-          <img src="assets/images/Fig4.png"width="400px" height="400px">
+          <a href="../visualizations/wind.html">
+          <img src="../assets/images/Fig4.png"width="400px" height="400px">
           </a>
         </div>
  
