--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -69,21 +69,21 @@
     </div>
     <div class="col-md-6">
       <h2>Cloudiness</h2>
-      <a href="visualizations/cloudiness.html">
+      <a href="../visualizations/cloudiness.html">
       <img src="../assets/images/Fig3.png"class="img-fluid"/>
       </a>
     </div>
 
     <div class="col-md-6">
       <h2>Temperature</h2>
-      <a href="visualizations/temp.html">
+      <a href="../visualizations/temp.html">
       <img src="../assets/images/Fig1.png"class="img-fluid"/>
       </a>
     </div>
 
     <div class="col-md-6">
       <h2>Wind Speed</h2>
-      <a href="visualizations/wind.html">
+      <a href="../visualizations/wind.html">
       <img src="../assets/images/Fig4.png"class="img-fluid"/>
       </a>
     </div>
